createEventTemplate now showing

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <div class='Container'>
   <h2> I'm here dammit. This is from the app.html template</h2>
-  <create-event day='Thursday'></create-event>
+  <createevent day='Thursday'></createevent>
 </div>
